k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-web-app
<<<<<<< HEAD
  type: ClusterIP
=======
  type: ClusterIP
>>>>>>> b17ef0d110626d6cc5b8a5c2c521b683fe1f4265
